[project]
name = "fastapi-ai-backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "aiosqlite>=0.22.1",
    "fastapi>=0.135.2",
    "fastapi-users[sqlalchemy]>=15.0.5",
    "imagekitio>=5.2.0",
    "python-dotenv>=1.2.2",
    "ruff>=0.15.8",
    "sqlalchemy>=2.0.48",
    "uvicorn[standard]>=0.42.0",
]
